--- a/race-score-react/javascript/src/App.css
+++ b/race-score-react/javascript/src/App.css
@@ -184,15 +184,15 @@
 .navbar {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
-  margin-left: -20%;
-  padding-left: 20%;
-  margin-right: -20%;
-  padding-right: 20%;
-  background-image: linear-gradient(rgba(0, 13, 83, 0.308), rgb(86, 159, 255));
-  box-shadow: 0 7px 6px -6px rgb(86, 159, 255);
+  margin-left: -10%;
+  padding-left: 10%;
+  margin-right: -8.6%;
+  padding-right: 8%;
+  background-image: linear-gradient(rgb(20, 20, 31), rgb(26, 39, 73));
+  box-shadow: 0 7px 6px -6px rgb(26, 39, 73);
 }
 .navbar-light,
 .navbar-brand,
 .nav-link {
-  color: rgb(27, 26, 26) !important;
+  color: rgb(255, 255, 255) !important;
 }
