--- a/race-score-react/javascript/src/App.css
+++ b/race-score-react/javascript/src/App.css
@@ -200,3 +200,14 @@
 .number-badge {
   background-color: rgb(255, 115, 0);
 }
+
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  padding-left: 3px !important;
+  padding-right: 3px !important;
+}
