--- a/race-score-react/javascript/src/App.css
+++ b/race-score-react/javascript/src/App.css
@@ -211,3 +211,17 @@
   padding-left: 3px !important;
   padding-right: 3px !important;
 }
+
+@media only screen and (max-width: 600px) {
+  .div-club {
+    margin-top: -4px;
+    margin-bottom: -3px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .div-club {
+    margin-top: 1px;
+    margin-bottom: 0px;
+  }
+}
